--- a/custome-home-style.css
+++ b/custome-home-style.css
@@ -62,5 +62,29 @@ ul li a{
 }
 
 header{
-    padding: 150px 20px 120px 20px;
+    padding: 200px 20px 150px 20px;
+}
+header p{
+    margin: 30px 0;
+    font-size: 20px;
+    max-width: 800px;
+}
+
+.custom-btn{
+    border-radius: 50px;
+    background-color: #BA0000;
+    color: #FFFFFF;
+    margin: 10px;
+    padding: 10px 40px !important;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.custom-btn:hover{
+    background-color: #01785A;
+}
+.c-locations .row{
+    margin: 0;
+}
+.c-locations .middle{
+    background-image: url('images/back-locations-box.jpg');
 }
