--- a/custome-home-style.css
+++ b/custome-home-style.css
@@ -32,7 +32,7 @@ header{
     height: auto;
 }
 .container{
-    max-width:1200px !important;
+    max-width:1300px !important;
 }
 .subheader a{
     color:#333333;
@@ -81,6 +81,7 @@ header p{
 }
 .custom-btn:hover{
     background-color: #01785A;
+    color: #ffffff;
 }
 
 
@@ -90,13 +91,44 @@ header p{
 }
 .c-locations .middle{
     background-image: url('images/back-locations-box.jpg');
-    padding: 50px 20px;
+    padding: 70px 20px;
     border-radius: 8px;
-    margin-top: -150px;
+    margin-top: -70px;
 }
 .c-locations p{
     max-width: 700px;
 }
 .btns-group .btn{
-    back
+    
+}
+.c-locations .nav-tabs{
+    border:none;
+
+}
+.c-locations .nav-tabs .nav-item{
+    border-radius: 50px;
+    background-color: #BA0000;
+    color: #FFFFFF;
+    padding: 10px 40px !important;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin:30px 20px;
+    border:none;
+}
+.c-locations .nav-tabs .active{
+    background-color: #01785A;
+}
+.card{
+    border-radius: 8px;
+    margin-top: 20px;
+    display: flex !important;
+    flex-direction: row !important;
+    justify-content: center !important;
+    max-width: 650px;
+    border: none; 
+    overflow: hidden !important;
+    text-align: left;
+}
+.card img{
+    max-width: 300px
 }
