--- a/custome-home-style.css
+++ b/custome-home-style.css
@@ -132,3 +132,15 @@ header p{
 .card img{
     max-width: 300px
 }
+footer{
+    background: #A5102E;
+}
+footer ul li a {
+    color: #ffffff;
+    font-family: Rubik;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+footer .author_credits a{
+    color: #ffffff;
+}
